[package]
name = "cargo-typoguard"
version = "0.1.0"
edition = "2021"
description = "A supply chain security tool that checks Cargo.toml dependencies for potential typosquatting"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
edit-distance = "2"
colored = "2"
ureq = { version = "2", features = ["json"] }
